Calculates Monlty Costs and Appends it

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,20 @@
-.inputs {
-    margin:10px;
-}
 
-table, th, td {
-    border: 1px solid black;
-    border-collapse:collapse;
-    margin: 10px;
-
-}
+table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even){
+    background-color: #f2f2f2;
+  }
+  
+  th {
+    background-color: #2C3852;
+    color: white;
+    font-size: 18px;
+  }
