Styled Table, Header, Buttons and Inputs

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,28 @@
 
 header{
-   background-image: url(scallop.jpg); 
-   background-size: 100% , 100%;
-   padding: 40px;
-  font-family: 'Charm', cursive;
-  color: #C80F7E;
-  font-size: 50px;
-  text-align: center;
+    background-image: url(bgImage4.jpg); 
+     background-size: 100% , 100%;
+    padding: 40px;
+    font-family: 'Bitter', serif;
+    color: #2C3852;
+    font-size: 50px;
+    text-align: center;
 }
 
-.employeeInputs {
-    margin: 20px;
-    
+h2{
+    font-family:'Bitter', serif;
+    color: #2C3852;
+    font-weight:bold;
+    font-size: 20px;
+}
+
+h3 {
+    font-family:'Bitter', serif;
+    color: #2C3852;
+    font-weight:bold;
+    font-size: 20px;
+    text-align: right;
+    margin: 100px;
 }
 
 table {
@@ -20,12 +31,23 @@ table {
   }
   
   th, td {
-    text-align: left;
-    padding: 8px;
+    border: 3px solid #2C3852;
+    font-family:'Bitter', serif;
+    color: #2C3852;
+    font-weight:bold;
+    font-size: 20px;
   }
   
+td{
+    text-indent: 20px;
+}
+
+  tr{
+      line-height: 40px;
+  }
+
   tr:nth-child(even){
-    background-color: #f2f2f2;
+    background-color: #D6D6D6;
   }
   
   th {
@@ -37,3 +59,40 @@ table {
   hr{
       border: 2px solid #C80F7E;
   }
+
+
+
+.employeeInputs {
+    margin: 20px;
+}
+
+
+#firstNameIn, #lastNameIn, #idNumberIn, #jobTitleIn, #annualSalaryIn {
+    font-family:'Bitter', serif;
+    color: #2C3852;
+    font-weight:bold;
+    background-color: #D6D6D6;
+    margin: 15px;
+    height: 30px;
+    width: 150px;
+    font-size: 18px;
+}
+
+#submitButton{
+    font-family:'Bitter', serif;
+    color: #2C3852;
+    font-weight:bold;
+    background-color: #D6D6D6;
+    margin: 15px;
+    height: 30px;
+    width: 150px;
+    font-size:18px;
+}
+
+#removeEmployeeLabel, #removeEmployeeButton{
+font-family:'Bitter', serif;
+    color: #2C3852;
+    font-weight:bold;
+    font-size: 20px;
+}
+}
