--- a/styles/main.css
+++ b/styles/main.css
@@ -90,7 +90,7 @@ td{
     font-size:18px;
 }
 
-#removeEmployeeButton, #removeThisEmployee {
+.removeButton {
     font-family:'Bitter', serif;
     color: #2C3852;
     font-weight:bold;
@@ -101,15 +101,7 @@ td{
     font-size:18px;
 }
 
-#removeEmployeeLabel {
-font-family:'Bitter', serif;
-    color: #2C3852;
-    font-weight:bold;
-    font-size: 20px;
-    margin: 20px;
-}
-
-#removeButtonBorder{
+#tdStyle{
     border: 0px;
     background-color: white;
 }
