--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-
 header{
     background-image: url(bgImage4.jpg); 
      background-size: 100% , 100%;
@@ -22,7 +21,8 @@ h3 {
     font-weight:bold;
     font-size: 20px;
     text-align: right;
-    margin: 100px;
+    margin-top: 50px;
+    margin-right: 150px;
 }
 
 table {
